made a couple of tweaks to id: job review text

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -798,16 +798,13 @@ subquestion: |
   Here is what you've told us about your jobs. You can add more or continue
   to the next question.
 
-  **Jobs**
   ${ jobs_table }
   
   ${ jobs.add_action() }  
   
-  Monthly total for wages: **${ currency(jobs.total(source=["part time", "full time"],times_per_year=12)) }**
+#  #Monthly total for wages: **${ currency(jobs.total(source=["part time", "full time"],times_per_year=12)) }**
   
-  Monthly total for self-employed work: **${ currency(jobs.total(source=["self employed"],times_per_year=12)) }**
-
-
+#  #Monthly total for self-employed work: **${ currency(jobs.total(source=["self employed"],times_per_year=12)) }**
 
 field: review_jobs
 ---
@@ -825,7 +822,7 @@ columns:
   - Job: |
       row_item.source
   - Employer: |
-      row_item.employer.name.first if defined("row_item.employer.name.first") else ""
+      row_item.employer.name.first if defined("row_item.employer.name.first") else "Self"
   - Monthly gross income: |
       currency(row_item.gross_total(times_per_year=12)) if len(public_benefits) == 0 else "Not needed"
 
@@ -1953,7 +1950,7 @@ review:
       % endif
       % endfor
       
-      **Self employed jobs**
+      **Self-employed jobs**
       % for item in jobs:
       % if item.is_self_employed:
       
@@ -2281,7 +2278,7 @@ attachments:
       - "users1_income_self_employment_monthly_amount": |
 
           % if defined("jobs"):
-          ${ currency(jobs.total(source=["self employed"],times_per_year=12)) }
+          ${ currency(jobs.total(source=["self employed"],times_per_year=12),symbol="") }
 
           % else:
           
