added default screen parts:   pre:  code to get the red id info etc to show on the server where I'm testing

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -21,6 +21,22 @@ objects:
 objects:
   - jobs[i].to_add: ALItemizedValueDict.using(complete_attribute="complete", there_are_any=True)
 ---
+
+
+############### REMOVE this code below when testing is done  ##########
+---
+default screen parts:
+  pre: |
+    % if not url_args.get("hide_hud", "").lower() in ["1", "on", "true", "yes"]:
+    `id: ${ user_info().question_id }`[BR]
+    `Variable: ${ user_info().variable }`[BR]
+    `Version: ${ user_info().package.replace("docassemble.", "") + " " if not user_info().package.startswith("docassemble.playground") else "" }${ package_version_number }; ${ al_version }`
+    % endif
+---
+##########################################################################
+
+
+---
 comment: |
   Global interview metadata
 metadata:
