--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -396,7 +396,7 @@ columns:
   - Source: |
       row_item.display_name if defined("row_item.source") else ""
   - Public assistance per month: |
-      currency(row_item.total(times_per_year=12))
+      currency(row_item.total(times_per_year=12)) if row_item.source == "Reach Up" or "3SquaresVT" or "GA" or "SSI" or "Fuel Assist." or "Housing Assist." or "other" else "Varies (automatically set to $0)"
 edit:
   - source
   - value
