--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -258,7 +258,8 @@ data: !!omap
   - Reach Up: "Reach Up"
   - 3SquaresVT: "3SquaresVT (food)"
   - GA: "General Assistance (GA)"
-  - SSI: "SSI (Supplemental Security Income)" 
+  - SSI: "SSI (Supplemental Security Income)"
+  - SSDI: "SSDI (Social Security Disability)"
   - Fuel Assist.: "Fuel Assistance"
   - Housing Assist.: "Housing Assistance (subsidy/voucher/Section 8)"  
   - Dr Dynasaur: "Dr. Dynasaur"
@@ -396,7 +397,7 @@ columns:
   - Source: |
       row_item.display_name if defined("row_item.source") else ""
   - Public assistance per month: |
-      currency(row_item.total(times_per_year=12)) if row_item.source == "Reach Up" or row_item.source == "3SquaresVT" or row_item.source == "GA" or row_item.source == "SSI" or row_item.source == "Fuel Assist." or row_item.source == "Housing Assist." or row_item.source == "other" else "Varies (can set to $0 for this form)"
+      currency(row_item.total(times_per_year=12)) if row_item.source == "Reach Up" or row_item.source == "3SquaresVT" or row_item.source == "GA" or row_item.source == "SSI" or row_item.source == "SSDI" or row_item.source == "Fuel Assist." or row_item.source == "Housing Assist." or row_item.source == "other" else "Varies (can set to $0 for this form)"
 edit:
   - source
   - value
