changed None of the above to None on id: are there public benefits

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -306,6 +306,8 @@ fields:
     datatype: checkboxes
     code: |
       public_benefits_ordered
+    none of the above: |
+      None
 ---
 id: ALIncome complete
 generic object: ALIncome
