--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -259,7 +259,6 @@ data: !!omap
   - 3SquaresVT: "3SquaresVT (food)"
   - GA: "General Assistance (GA)"
   - SSI: "SSI (Supplemental Security Income)"
-  - SSDI: "SSDI (Social Security Disability)"
   - Fuel Assist.: "Fuel Assistance"
   - Housing Assist.: "Housing Assistance (subsidy/voucher/Section 8)"  
   - Dr Dynasaur: "Dr. Dynasaur"
@@ -399,7 +398,7 @@ columns:
   - Source: |
       row_item.display_name if defined("row_item.source") else ""
   - Public assistance per month: |
-      currency(row_item.total(times_per_year=12)) if row_item.source == "Reach Up" or row_item.source == "3SquaresVT" or row_item.source == "GA" or row_item.source == "SSI" or row_item.source == "SSDI" or row_item.source == "Fuel Assist." or row_item.source == "Housing Assist." or row_item.source == "other" else "Varies (can set to $0 for this form)"
+      currency(row_item.total(times_per_year=12)) if row_item.source == "Reach Up" or row_item.source == "3SquaresVT" or row_item.source == "GA" or row_item.source == "SSI" or row_item.source == "Fuel Assist." or row_item.source == "Housing Assist." or row_item.source == "other" else "Varies (can set to $0 for this form)"
 edit:
   - source
   - value
@@ -1023,7 +1022,7 @@ subquestion: |
   For this guided interview, you will need to know:
   
   * the name and address of any employer you might have
-  * any public assistance that you get (like 3SquaresVT food help, ReachUp help for families, SSDI, etc.) and the amount, and
+  * any public assistance that you get (like 3SquaresVT food help, ReachUp help for families, SSI, etc.) and the amount, and
   * information about the court case for which you want a fee waiver. (You can find this information on other court papers you have about this case. If you are starting a court action -- like filing for divorce -- you won't have a case number or docket number yet.)
   
   If you get public assistance, that's all you need. **If you don't get public assistance**, you will also need to know:
