first batch of text and format changes from user testing feedback

--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1086,7 +1086,7 @@ subquestion: |
   * your income -- If you work or get unemployment, have those paystubs on hand. If you get child support, have that information on hand. If you are self-employed, have your IRS Schedule C on hand or have your income and business expenses from the last 12 months.
   * your expenses (like rent, utilities, insurance payments, child care, etc.) -- looking back over the last 12 months
   * the amount of money you have in the bank and on hand
-  * the value of your vehicle/car, real estate/home, and any other major things you might own, and
+  * the approximate value of your vehicle/car, real estate/home, and any other major things you might own, and
   * if filling out form on behalf of a minor or incompetent adult, you need that person’s information.
 
 ---
@@ -1144,6 +1144,7 @@ fields:
     code: sorted(all_courts.unique_column_values('branch'))
     
   - note: |
+      ${ collapse_template(which_county) }
       ${ collapse_template(types_of_cases_in_each_court_division) }
 ---
 id: court case information
@@ -1159,7 +1160,7 @@ fields:
   - note: |
       **Note**: If you are starting a case, you are the plaintiff. Type in your first and last name "vs." the first and last name of the other party / defendant(s).
       
-      If you are a defendant in a case, type in the plaintiff's first and last name(s) "vs." your first and last name.
+      If you are a defendant in a case, type in the plaintiff's first and last name(s) "vs." your first and last name. If you are filing a counterclaim, you remain the defendant. Use the plaintiff and defendant names as seen on the original court papers you got.
 ---
 ############################### USERS INFO ###############################
 ---
@@ -1507,6 +1508,8 @@ fields:
     datatype: currency
   - If you have a loan or owe money on the ${ vehicles[i].source }, how much do you owe? Enter 0 if you own it outright.: vehicles[i].balance
     datatype: currency
+  - note: |
+      ${ collapse_template(vehicle_value) }
 validation code: |
   if vehicles[i].source != "other":
     vehicles[i].display_name = vehicles.terms_ordered.get(vehicles[i].source, vehicles[i].source)
@@ -1941,12 +1944,14 @@ subquestion: |
   
   ${ al_court_bundle.as_pdf(key='preview') }
 
-  Click the image to open it in a new tab. Click the "Edit your answers" button
-  to edit your answers.
+  Click the image to open it in a new tab.
+  
+  Click the "Edit your answers" button to edit your answers. **Remember to come back to this window to finish the form.**
 
   ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
+
+  Tap Next to choose how to sign your document.
   
-  **Remember to come back to this window to continue and sign your form.**
 continue button field: VT_fee_waiver_preview_question    
 ---
 code: |
@@ -2174,13 +2179,16 @@ subquestion: |
   ${ download_screen_instructions_one_form }
 
   ${ action_button_html(url_action('review_VT_fee_waiver'), label='Edit your answers', color='info') }
+
+  <hr>
   
+  <h4 style="margin-bottom: 18px;">Documents to download</h4>
   
   ${ al_user_bundle.download_list_html() }
-  
 
   ${ al_user_bundle.send_button_html(show_editable_checkbox=False) }
 
+  <hr>  
   
   ${ download_screen_bottom_instructions }
   
